# feup-da-project-2

./: .gitignore  CMakeLists.txt  main.cpp
algorithms/: DPKnapsack.cpp  DPKnapsack.h  GreedyKnapsack.cpp  GreedyKnapsack.h  KnapsackBacktrack.cpp  KnapsackBacktrack.h
cli/: CLI.cpp  CLI.h  CommandRegistry.cpp  CommandRegistry.h
commands/: BruteForceKnapsack.cpp  BruteForceKnapsack.h  Command.cpp  Command.h  CreateProblemInstance.cpp  CreateProblemInstance.h  DynamicProgrammingKnapsack.cpp  DynamicProgrammingKnapsack.h  GreedyKnapsackCommand.cpp  GreedyKnapsackCommand.h  Help.cpp  Help.h  ReadFromFile.cpp  ReadFromFile.h  TestExecutionTime.cpp  TestExecutionTime.h
context/: Context.h
csv_parser/: CSVParser.cpp  CSVParser.h
data_structures/: TruckProblemInstance.cpp  TruckProblemInstance.h
docs/html/: _brute_force_knapsack_8cpp.html  _brute_force_knapsack_8h.html  _brute_force_knapsack_8h.js  _brute_force_knapsack_8h_source.html  _c_l_i_8cpp.html  _c_l_i_8h.html  _c_l_i_8h.js  _c_l_i_8h_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_s_v_parser_8cpp.html  _c_s_v_parser_8h.html  _c_s_v_parser_8h.js  _c_s_v_parser_8h_source.html  _command_8cpp.html  _command_8h.html  _command_8h_source.html  _command_registry_8cpp.html  _command_registry_8h.html  _command_registry_8h.js  _command_registry_8h_source.html  _context_8h.html  _context_8h.js  _context_8h_source.html  _create_problem_instance_8cpp.html  _create_problem_instance_8h.html  _create_problem_instance_8h.js  _create_problem_instance_8h_source.html  _d_p_knapsack_8cpp.html  _d_p_knapsack_8cpp.js  _d_p_knapsack_8h.html  _d_p_knapsack_8h.js  _d_p_knapsack_8h_source.html  _dynamic_programming_knapsack_8cpp.html  _dynamic_programming_knapsack_8h.html  _dynamic_programming_knapsack_8h.js  _dynamic_programming_knapsack_8h_source.html  _greedy_knapsack_8cpp.html  _greedy_knapsack_8cpp.js  _greedy_knapsack_8h.html  (+108 more)
docs/latex/: _brute_force_knapsack_8cpp.tex  _brute_force_knapsack_8h.tex  _brute_force_knapsack_8h_source.tex  _c_l_i_8cpp.tex  _c_l_i_8h.tex  _c_l_i_8h_source.tex  _c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  _c_s_v_parser_8cpp.tex  _c_s_v_parser_8h.tex  _c_s_v_parser_8h_source.tex  _command_8cpp.tex  _command_8h.tex  (+65 more)
(+46 files in other folders)
